--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,32 @@
-#sign{
-margin-bottom: 40px;
-}
+/************************************************/
+/*	Feuille de style du site Tera				*/
 
-#todo-list{
-}
+/****************************/
+/*	Menue de navigation		*/
 
-intro{
-	background: url("../img/carbon_fibre/carbon_fibre.png") repeat;
-}
+
+#typotera	{	max-height:100%;	}
+#ateraimg	{	padding:0px;		}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#sign	{	margin-bottom: 40px;	}
+
+#todo-list	{	}
+
+
+
+intro	{	background: url("../img/carbon_fibre/carbon_fibre.png") repeat;		}
